# level4-cv-finalproject-hackathon-cv-22-lv3

./: .gitignore  README.md  auto_ml.py  create_sample_dataset.py  dataset.py  determine_feature.py  determine_type.py  gpt.py  main.py  main_config.py  optimization.py  requirements.txt  setting.py  simple_preprocessing.py
fastapi-ca/: .env  alembic.ini  configx.py  containers.py  create_test_data.py  database.py  database_models.py  logging_config.py  main.py  pyproject.toml
fastapi-ca/common/: auth.py
fastapi-ca/config/application/: config_service.py
fastapi-ca/config/domain/: config.py
fastapi-ca/config/domain/repository/: config_repo.py
fastapi-ca/config/infra/db_models/: config.py
fastapi-ca/config/infra/repository/: config_repo.py
fastapi-ca/config/interface/controllers/: config_controller.py
fastapi-ca/dataset/application/: dataset_service.py
fastapi-ca/dataset/domain/: dataset.py
fastapi-ca/dataset/domain/repository/: dataset_repo.py
fastapi-ca/dataset/infra/db_models/: dataset.py
fastapi-ca/dataset/infra/repository/: dataset_repo.py
fastapi-ca/flow/application/: flow_service.py
fastapi-ca/flow/domain/: flow.py
fastapi-ca/inform/application/: inform_service.py
fastapi-ca/inform/domain/: inform.py
fastapi-ca/migrations/versions/: 30b62d82a651_fix_inform_table.py  e115f42fbb6c_add_tables.py
fastapi-ca/project/application/: project_service.py
fastapi-ca/project/domain/: project.py
fastapi-ca/user/application/: email_service.py  user_service.py
fastapi-ca/user/domain/: user.py
fastapi-ca/utils/: crypto.py  db_utils.py
(+106 files in other folders)
